src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> table_command
Rule 2     program -> <empty>
Rule 3     table_command -> import_command
Rule 4     table_command -> export_command
Rule 5     import_command -> IMPORT TABLE ID FROM STRING ;
Rule 6     export_command -> EXPORT TABLE ID AS STRING ;

Terminals, with rules where they appear

;                    : 5 6
AS                   : 6
EXPORT               : 6
FROM                 : 5
ID                   : 5 6
IMPORT               : 5
STRING               : 5 6
TABLE                : 5 6
error                : 

Nonterminals, with rules where they appear

export_command       : 4
import_command       : 3
program              : 0
table_command        : 1

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . table_command
    (2) program -> .
    (3) table_command -> . import_command
    (4) table_command -> . export_command
    (5) import_command -> . IMPORT TABLE ID FROM STRING ;
    (6) export_command -> . EXPORT TABLE ID AS STRING ;

    $end            reduce using rule 2 (program -> .)
    IMPORT          shift and go to state 5
    EXPORT          shift and go to state 6

    program                        shift and go to state 1
    table_command                  shift and go to state 2
    import_command                 shift and go to state 3
    export_command                 shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> table_command .

    $end            reduce using rule 1 (program -> table_command .)


state 3

    (3) table_command -> import_command .

    $end            reduce using rule 3 (table_command -> import_command .)


state 4

    (4) table_command -> export_command .

    $end            reduce using rule 4 (table_command -> export_command .)


state 5

    (5) import_command -> IMPORT . TABLE ID FROM STRING ;

    TABLE           shift and go to state 7


state 6

    (6) export_command -> EXPORT . TABLE ID AS STRING ;

    TABLE           shift and go to state 8


state 7

    (5) import_command -> IMPORT TABLE . ID FROM STRING ;

    ID              shift and go to state 9


state 8

    (6) export_command -> EXPORT TABLE . ID AS STRING ;

    ID              shift and go to state 10


state 9

    (5) import_command -> IMPORT TABLE ID . FROM STRING ;

    FROM            shift and go to state 11


state 10

    (6) export_command -> EXPORT TABLE ID . AS STRING ;

    AS              shift and go to state 12


state 11

    (5) import_command -> IMPORT TABLE ID FROM . STRING ;

    STRING          shift and go to state 13


state 12

    (6) export_command -> EXPORT TABLE ID AS . STRING ;

    STRING          shift and go to state 14


state 13

    (5) import_command -> IMPORT TABLE ID FROM STRING . ;

    ;               shift and go to state 15


state 14

    (6) export_command -> EXPORT TABLE ID AS STRING . ;

    ;               shift and go to state 16


state 15

    (5) import_command -> IMPORT TABLE ID FROM STRING ; .

    $end            reduce using rule 5 (import_command -> IMPORT TABLE ID FROM STRING ; .)


state 16

    (6) export_command -> EXPORT TABLE ID AS STRING ; .

    $end            reduce using rule 6 (export_command -> EXPORT TABLE ID AS STRING ; .)

